@@ -2,20 +2,21 @@ package org.jabref.logic.exporter;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
 
 import org.jabref.logic.bibtex.comparator.FieldComparator;
 import org.jabref.logic.bibtex.comparator.FieldComparatorStack;
 import org.jabref.logic.layout.format.GetOpenOfficeType;
+import org.jabref.logic.layout.format.NonSpaceWhitespaceRemover;
 import org.jabref.logic.layout.format.RemoveBrackets;
-import org.jabref.logic.layout.format.RemoveWhitespace;
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.FieldFactory;
+import org.jabref.model.entry.field.FieldTextMapper;
 import org.jabref.model.entry.field.InternalField;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.field.UnknownField;
@@ -34,7 +35,7 @@ class OOCalcDatabase {
 
     private final List<BibEntry> entries = new ArrayList<>();
     private final List<Field> toExportFields = Stream.concat(FieldFactory.getStandardFieldsWithCitationKey().stream(), Stream.of(REPORT_TYPE_FIELD))
-                                                     .collect(Collectors.toList());
+                                                     .toList();
 
     public OOCalcDatabase(BibDatabase bibtex, List<BibEntry> entries) {
         this.entries.addAll(entries != null ? entries : bibtex.getEntries());
@@ -68,7 +69,7 @@ class OOCalcDatabase {
             for (BibEntry entry : entries) {
                 addEntryRow(entry, table, document);
             }
-        } catch (Exception e) {
+        } catch (ParserConfigurationException e) {
             LOGGER.warn("Exception caught...", e);
         }
         return document;
@@ -80,7 +81,7 @@ class OOCalcDatabase {
         addTableCell(document, row, new GetOpenOfficeType().format(entry.getType().getName()));
         toExportFields.forEach(field -> {
             if (field.equals(StandardField.TITLE)) {
-                addTableCell(document, row, new RemoveWhitespace().format(new RemoveBrackets().format(getField(entry, StandardField.TITLE))));
+                addTableCell(document, row, new NonSpaceWhitespaceRemover().format(new RemoveBrackets().format(getField(entry, StandardField.TITLE))));
             } else {
                 addTableCell(document, row, getField(entry, field));
             }
@@ -145,7 +146,12 @@ class OOCalcDatabase {
         firstRow.setAttribute("table.style-name", "ro1");
         addTableCell(document, firstRow, "Type");
         for (Field field : toExportFields) {
-            addTableCell(document, firstRow, field.getDisplayName());
+            // Special case for OpenOffice/LibreOffice internal field reporttype, should not be handled as a normal field
+            if ("reporttype".equalsIgnoreCase(field.getName())) {
+                addTableCell(document, firstRow, "Reporttype");
+            } else {
+                addTableCell(document, firstRow, FieldTextMapper.getDisplayName(field));
+            }
         }
 
         table.appendChild(firstRow);
